--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "NODE_ENV=production node server",
-    "dev": "nodemon server"
+    "dev": "nodemon server",
+    "test": "jest"
   },
   "author": "Jon Mester",
   "license": "MIT",
@@ -13,10 +14,14 @@
     "dotenv": "^8.2.0",
     "eslint": "^6.7.2",
     "express": "^4.17.1",
+    "jest": "^24.9.0",
     "mongoose": "^5.8.1",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "node-geocoder": "^3.25.0",
+    "slugify": "^1.3.6"
   },
   "devDependencies": {
+    "axios": "^0.19.0",
     "nodemon": "^2.0.2"
   }
 }
