--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "Jon Mester",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "eslint": "^6.7.2",
     "express": "^4.17.1",
     "jest": "^24.9.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.1",
     "morgan": "^1.9.1",
     "node-geocoder": "^3.25.0",
