--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "dotenv": "^8.2.0",
     "eslint": "^6.7.2",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^1.3.2",
+    "express-rate-limit": "^5.0.0",
+    "helmet": "^3.21.2",
+    "hpp": "^0.2.2",
     "jest": "^24.9.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.1",
     "morgan": "^1.9.1",
     "node-geocoder": "^3.25.0",
     "nodemailer": "^6.4.2",
-    "slugify": "^1.3.6"
+    "slugify": "^1.3.6",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "axios": "^0.19.0",
